# Agentic_Exp

./: .dockerignore  .env.example  .gitignore  DASHBOARD.md  DASHBOARD_API.md  DASHBOARD_IMPLEMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quick_start.py  start_dashboard.py
config/: settings.py
dashboard/: index.html
examples/: basic_agent.py  mcp_demo.py  rag_demo.py
src/: __init__.py  utils.py
src/agent/: __init__.py  self_correcting.py
src/api/: chat.py  main.py
src/mcp/: __init__.py  server.py
src/monitoring/: __init__.py  audit.py  hallucination.py  metrics.py
src/rag/: __init__.py  pipeline.py
src/tools/: __init__.py
tests/: test_dashboard.py  test_framework.py
